--- a/SEconfdemoApp/app/src/main/res/layout/item_message_left.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/item_message_left.xml
@@ -6,6 +6,7 @@
     xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_msg_from"
     android:orientation="horizontal"
     android:paddingTop="5dp"
     android:paddingLeft="16dp"
