--- a/SEconfdemoApp/app/src/main/res/layout/item_message_right_img.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/item_message_right_img.xml
@@ -3,6 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
+                android:id="@+id/root"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="5dp"
