--- a/SEconfdemoApp/app/src/main/res/layout/item_mine_msg.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/item_mine_msg.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:gravity="end"
@@ -53,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
+                android:layout_alignParentTop="true"
                 android:text="Title"
                 android:textColor="@color/chat_text_title_color"
                 android:textSize="@dimen/text_size_title_super_small"/>
@@ -61,7 +64,7 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/my_title_tv"
+                android:layout_below="@+id/title_tv"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:background="@color/chat_divider_color"/>
@@ -81,25 +84,18 @@
                 android:textSize="@dimen/text_size_title_small"/>
 
             <ImageView
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_below="@id/chat_msg_text_tv"
                 android:id="@+id/img_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#000"
+                tools:background="#000"
                 android:maxHeight="150dp"
                 android:maxWidth="150dp"
                 android:minHeight="100dp"
                 android:minWidth="100dp"
-                android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/tvLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/img_chat"
-                android:layout_marginTop="2dp"
-                android:text="@string/location_received"
-                android:textSize="10sp"
-                android:textStyle="bold"
+                tools:visibility="visible"
                 android:visibility="gone"/>
 
 
@@ -107,7 +103,7 @@
                 android:id="@+id/timestamp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/chat_msg_text_tv"
+                android:layout_below="@id/img_chat"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="5dp"
                 android:padding="10dp"
