--- a/SEconfdemoApp/app/src/main/res/layout/activity_chat.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/activity_chat.xml
@@ -97,7 +97,7 @@
         android:weightSum="1">
 
         <EditText
-            android:id="@+id/edtInput"
+            android:id="@+id/editTextMessage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
