--- a/SEconfdemoApp/app/src/main/res/layout/activity_main.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/activity_main.xml
@@ -27,39 +27,43 @@
             android:background="@drawable/bg_msg_from" />
     </FrameLayout>
 
-    <RelativeLayout
-        android:background="#fff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp">
-        <ImageView
-            android:id="@+id/buttonEmoji"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="4dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/editTextMessage"
-            />
-        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
+        <LinearLayout
+            android:id="@+id/edtInput_lay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editTextMessage"
-            android:layout_toStartOf="@+id/buttonMessage"
-            android:layout_toLeftOf="@+id/buttonMessage"
-            android:layout_toRightOf="@+id/buttonEmoji"
-            android:layout_toEndOf="@+id/buttonEmoji"
-            emojicon:emojiconSize="28sp"/>
-        <ImageView
-            android:id="@+id/buttonMessage"
-            android:src="@android:drawable/ic_menu_send"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="4dp"
-            android:layout_alignBottom="@+id/editTextMessage"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            />
-    </RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:padding="2dp"
+            android:background="@color/chat_edit_lay_color"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <EditText
+                android:id="@+id/mesageEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.7"
+                android:background="@color/white_mixed"
+                android:hint="@string/write_your_message_here"
+                android:imeOptions="actionSend|actionDone"
+                android:inputType="textCapSentences|textMultiLine"
+                android:maxLength="2000"
+                android:maxLines="4"
+                android:padding="10dp"
+                android:tag="regular"/>
+
+            <include
+                android:id="@+id/buttonMessage"
+                layout="@layout/view_send_msg"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:layout_weight="0.3"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
 </LinearLayout>
