--- a/SEconfdemoApp/app/src/main/res/layout/item_other_msg.xml
+++ b/SEconfdemoApp/app/src/main/res/layout/item_other_msg.xml
@@ -11,9 +11,16 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
     >
-
+    <ImageView
+        android:id="@+id/image_ava"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignBottom="@+id/chat_lay"/>
     <LinearLayout
         android:id="@+id/chat_lay"
+        android:layout_marginLeft="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
